# libmpix

./: CHANGELOG.md  CHANGELOG.txt
.github/workflows/: tests.yml
bindings/lua/: lua_mpix.c  main.c  main.lua
bindings/micropython/mpix/: .gitignore  Makefile  mod_mpix.c  test_mpix.py
cli/: main.c
docs/: Doxyfile  page_architecture.md  page_command_line.md  page_how_to_crop.md  page_how_to_kernel.md  page_how_to_palettize.md  page_how_to_resize.md  page_new_operation.md  stylesheet.css
examples/benchmark/: CMakeLists.txt  README.md
examples/benchmark/src/: main.c
examples/simple_isp/: main.c
include/mpix/: image.h  lua.h  operation.h  pipeline.h  port.h  print.h  ring.h  stats.h  types.h
ports/pico_sdk/: CMakeLists.txt  port.c
ports/posix/: port.c
ports/qemu_cortex_m55/: CMakeLists.txt  README.md  port.c
ports/qemu_riscv64/: CMakeLists.txt  README.md  main.c  port.c  riscv64.ld  startup.S  syscall_stubs.c  toolchain-riscv64.cmake
ports/zephyr_3_6/: port.c
ports/zephyr_main/: port.c
scripts/: genlist.sh
src/: image.c  op_correct_color_matrix.c  op_correct_fused.c  op_correction.c  op_debayer_ir_5x3.c  palette.c  pipeline.c  print.c  stats.c  str.c
src/arch/arm/: op_correction_helium.c  op_debayer_helium.c  op_jpeg_helium.c  op_kernel_helium.c  op_palettize_helium.c
zephyr/: Kconfig
